<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JobDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/job_details_title"
            android:textColor="@android:color/black"
            android:id="@+id/job_details_title"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/_2_august_2018"
            android:id="@+id/job_details_date"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/job_details_description"
            android:textColor="@android:color/black"
            android:id="@+id/job_details_description"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/job_details_location"
            android:textColor="@android:color/black"
            android:id="@+id/job_details_location"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/skills"
            android:textColor="@android:color/black"
            android:id="@+id/job_details_skills"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/job_details_salary"
            android:id="@+id/job_details_salary"
            android:textColor="@android:color/black"
            />




    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>