<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_colour"
    tools:context=".startingActivity">

    <TextView
        android:id="@+id/startTitle"
        android:layout_width="137dp"
        android:layout_height="35dp"
        android:layout_marginTop="40dp"
        android:text="@string/labourfinder"
        android:textColor="@android:color/black"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btnWorker"
        android:layout_width="203dp"
        android:layout_height="71dp"
        android:layout_marginTop="52dp"
        android:background="@drawable/edit_design"
        android:text="@string/worker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startTitle" />

    <Button
        android:id="@+id/btnCompany"
        android:layout_width="208dp"
        android:layout_height="68dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/edit_design"
        android:text="@string/company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWorker" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/companyLogo" />
</androidx.constraintlayout.widget.ConstraintLayout>